[gd_scene load_steps=9 format=2]

[ext_resource path="res://actors/enemies/ground_bug.gd" type="Script" id=1]
[ext_resource path="res://actors/enemies/screen_bug.png" type="Texture" id=2]
[ext_resource path="res://actors/juan_alpaca/1_jump.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[sub_resource type="GDScript" id=3]
script/source = "extends Area2D

func damage_parent(amount):
	get_parent().damage_health(amount)"

[sub_resource type="CircleShape2D" id=4]
radius = 24.0

[sub_resource type="CircleShape2D" id=5]
radius = 32.9848

[node name="ground_bug" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="area" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="area"]
shape = SubResource( 2 )

[node name="attach_area" type="Area2D" parent="."]
script = SubResource( 3 )

[node name="shape" type="CollisionShape2D" parent="attach_area"]
shape = SubResource( 4 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "enemies"

[node name="jump_interval" type="Timer" parent="."]

[node name="bounce_area" type="Area2D" parent="." groups=[
"enemy",
]]

[node name="shape" type="CollisionShape2D" parent="bounce_area"]
shape = SubResource( 5 )
[connection signal="area_entered" from="area" to="." method="_on_area_entered"]
[connection signal="area_entered" from="attach_area" to="." method="_on_attach_area_entered"]
[connection signal="timeout" from="jump_interval" to="." method="_on_jump_interval_timeout"]
